<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.stonybrook.bmi</groupId>
	<artifactId>hatch</artifactId>
	<version>4.3.0</version>
	<packaging>jar</packaging>
	<properties>
            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            <maven.compiler.release>21</maven.compiler.release>
            <ver.bioformats>8.3.0</ver.bioformats>
            <twelvemonkeys.version>3.12.0</twelvemonkeys.version>
	</properties>
	<dependencies>
            <dependency>
		<groupId>ome</groupId>
		<artifactId>formats-gpl</artifactId>
		<version>${ver.bioformats}</version>
		<scope>compile</scope>
                <exclusions>
                    <exclusion>
                        <groupId>edu.ucar</groupId>
                        <artifactId>cdm-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.jcommander</groupId>
                <artifactId>jcommander</artifactId>
                <version>2.0</version>
            </dependency>
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-tiff</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>apache-jena-libs</artifactId>
                <version>5.5.0</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>2.0.12</version>
            </dependency>
            <dependency>
                <groupId>me.tongfei</groupId>
                <artifactId>progressbar</artifactId>
                <version>0.10.1</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>
	</dependencies>
	<build>
              <resources>
                <resource>
                    <filtering>false</filtering>
                    <directory>src/main/resources</directory>
                </resource>
                <resource>
                    <filtering>false</filtering>
                    <directory>src/main/java</directory>
                    <includes>
                        <include>**</include>
                    </includes>
                    <excludes>
                        <exclude>**/*.java</exclude>
                    </excludes>
                </resource>
            </resources>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <configuration>
                        <argLine>-Djava.awt.headless=true</argLine>
                    </configuration>
                </plugin>
            </plugins>
	</build>
	<repositories>
            <repository>
                <id>central</id>
		<name>Central Repository</name>
		<url>https://repo.maven.apache.org/maven2</url>
            </repository>
            <repository>
		<id>ome</id>
		<name>OME Artifactory</name>
		<url>https://artifacts.openmicroscopy.org/artifactory/maven/</url>
            </repository>
            <repository>
                <id>halcyon</id>
                <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
            </repository>
	</repositories>
        <profiles>
            <profile>
                <id>jar</id>
                <activation>
                    <activeByDefault>true</activeByDefault>
                </activation>
                <build>
                    <finalName>hatch-${project.version}</finalName>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-enforcer-plugin</artifactId>
                            <version>3.6.1</version>
                            <executions>
                                <execution>
                                    <id>enforce</id>
                                    <goals>
                                        <goal>enforce</goal>
                                    </goals>
                                    <configuration>
                                        <rules>
                                            <banDuplicatePomDependencyVersions/>
                                        </rules>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-shade-plugin</artifactId>
                            <version>3.6.0</version>
                            <configuration>
                                <shadedArtifactAttached>false</shadedArtifactAttached>
                                <transformers>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>edu.stonybrook.bmi.hatch.Hatch</mainClass>
                                        <manifestEntries>
                                            <Multi-Release>true</Multi-Release>
                                        </manifestEntries>
                                    </transformer>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            </configuration>
                            <executions>
                                <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </build>
            </profile>
            <profile>
                <id>native</id>
                <build>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.14.0</version>
                            <configuration>
                                <compilerArgs>
                                    <arg>--add-reads</arg>
                                    <arg>edu.stonybrook.bmi.hatch=ALL-UNNAMED</arg>
                                </compilerArgs>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.graalvm.buildtools</groupId>
                            <artifactId>native-maven-plugin</artifactId>
                            <version>0.11.0</version>
                            <extensions>true</extensions>
                            <executions>
                                <execution>
                                    <id>build-native</id>
                                    <goals>
                                        <goal>compile-no-fork</goal>
                                    </goals>
                                    <phase>package</phase>
                                </execution>
                            </executions>
                            <configuration>
                                <imageName>hatch</imageName>
                                <mainClass>edu.stonybrook.bmi.hatch.Hatch</mainClass>
                                <debug>true</debug>
                                <skipNativeTests>true</skipNativeTests>
                                <verbose>true</verbose>
                                <buildArgs>
                                    <buildArg>--no-fallback</buildArg>
                                    <buildArg>-H:ConfigurationFileDirectories=config</buildArg>
                                    <buildArg>--enable-url-protocols=https</buildArg>
                                    <buildArg>-H:+AddAllCharsets</buildArg>
                                    <buildArg>--gc=G1</buildArg>
                                    <buildArg>-march=native</buildArg>
                                    <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                                    <buildArg>-H:IncludeResources="logging.properties"</buildArg>
                                </buildArgs>
                            </configuration>
                        </plugin>
                    </plugins>
                </build>
            </profile>
        </profiles>
</project>
